--- a/ClinVar/TDA_ClinVar/Makefile
+++ b/ClinVar/TDA_ClinVar/Makefile
@@ -1,20 +1,26 @@
-CPPFLAGS = g++ -std=c++11 -c
+CPPFLAGS = g++ -std=c++11
 
 # EJECUTABLES
 
 bin/principal: obj/principal.o obj/enfermedad.o obj/mutacion.o obj/clinvar.o
-		g++ -std=c++11 -o bin/principal obj/enfermedad.o obj/mutacion.o obj/clinvar.o
+		g++ obj/principal.o obj/enfermedad.o obj/mutacion.o obj/clinvar.o -o bin/principal
 
 # ARCHIVOS OBJETO
 
 obj/principal.o: src/principal.cpp
-	$(CPPFLAGS) -Iinclude src/principal.cpp -o obj/pincipal.o
+	$(CPPFLAGS) -c src/principal.cpp -o obj/principal.o -Iinclude
 
 obj/clinvar.o: src/clinvar.cpp include/clinvar.h
-	$(CPPFLAGS) -Iinclude src/clinvar.cpp -o obj/clinvar.o
+	$(CPPFLAGS) -c src/clinvar.cpp -o obj/clinvar.o -Iinclude
 
 obj/enfermedad.o: src/enfermedad.cpp include/enfermedad.h
-	$(CPPFLAGS) -Iinclude src/enfermedad.cpp -o obj/enfermedad.o
+	$(CPPFLAGS) -c src/enfermedad.cpp -o obj/enfermedad.o -Iinclude
 
 obj/mutacion.o: src/mutacion.cpp include/mutacion.h
-	$(CPPFLAGS) -Iinclude src/mutacion.cpp -o obj/mutacion.o
+	$(CPPFLAGS) -c src/mutacion.cpp -o obj/mutacion.o -Iinclude
+
+clean:
+	echo "Limpiando..."
+	rm $(OBJ)/*.o
+mrproper: clean
+	rm $(BIN)/principal
